--- a/login/build.gradle
+++ b/login/build.gradle
@@ -7,11 +7,11 @@ plugins {
 group = 'com.simple'
 version = '0.0.1-SNAPSHOT'
 
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(11)
-    }
-}
+// java {
+//     toolchain {
+//         languageVersion = JavaLanguageVersion.of(11)
+//     }
+// }
 
 repositories {
     mavenCentral()
