--- a/login/src/main/resources/application.properties
+++ b/login/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=8484
 
 # SQL mapper
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://172.30.1.20:3306/project?serverTimezone=Asia/Seoul
 #spring.datasource.username=team3
 #spring.datasource.password=team3
@@ -17,13 +17,15 @@ mybatis.mapper-locations=classpath:/mapper/**/*.xml
 #mybatis?????? ????
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/spring?serverTimezone=Asia/Seoul
-mybatis.type-aliases-package=com.project.domitory.command
+mybatis.type-aliases-package=com.project.login.jwt.command
 spring.servlet.multipart.enabled=true 
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.max-file-size=10MB
-project.upload.path=/Users/chambitlee/JAVA/course/Spring/workspace/TeamProject_System/upload
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/post?serverTimezone=Asia/Seoul
-spring.datasource.username=post
-spring.datasource.password=post
+spring.datasource.url=jdbc:mysql://localhost:3306/spring
+# spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spring?serverTimezone=Asia/Seoul
+spring.datasource.username=spring
+spring.datasource.password=spring
 
-
+# logging.level.root=DEBUG
+# logging.level.org.springframework.web=TRACE
+spring.output.ansi.enabled=ALWAYS;
